# deluge-maintain

./: .dockerignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  deluge-maintain.toml  release-please-config.json
.github/workflows/: build.yaml  release.yaml
src/: cli.rs  config.rs  engine.rs  lib.rs  main.rs  scheduler.rs  service.rs
src/config/: condition.rs  config.rs  filter.rs  host.rs  mod.rs  policy.rs
src/engine/: deletion_priority.rs  engine.rs  mod.rs  plan_deletions.rs
src/policy/: condition.rs  filter.rs  mod.rs  policy.rs
src/service/: factory.rs  mod.rs  service.rs  torrent_entry.rs
tests/: config_test.rs  integration_tests.rs
